force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/Apttus_Config2__PriceBreakup__c.object-meta.xml
<CustomObject>
    <description>Represents the price breakup of a product/service</description>
    <label>Price Breakup</label>
    <nameField>
        <displayFormat>PB-{00000000}</displayFormat>
        <label>Breakup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>