force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__BasePrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BasePrice__c</fullName>
    <description>The computed base price</description>
    <inlineHelpText>The computed base price</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>