force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__BreakupType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BreakupType__c</fullName>
    <description>The price break type</description>
    <inlineHelpText>The price break type</inlineHelpText>
    <label>Breakup Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Related Price</fullName>
            </value>
            <value>
                <fullName>Tier Price</fullName>
            </value>
            <value>
                <fullName>Service Price</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Price Waterfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>