force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__Data__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Data__c</fullName>
    <description>Json for list of computed values for price points with adjustments.</description>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>