force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__LineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineItemId__c</fullName>
    <description>ID of the associated line item</description>
    <inlineHelpText>ID of the associated line item</inlineHelpText>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Price Breakups</relationshipLabel>
    <relationshipName>PriceBreakups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>