force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__NetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
    <description>The computed net unit price</description>
    <inlineHelpText>The computed net unit price</inlineHelpText>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>