force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__RelatedBasePrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedBasePrice__c</fullName>
    <description>The related base price computed based on the related product/service</description>
    <inlineHelpText>The related base price computed based on the related product/service</inlineHelpText>
    <label>Related Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>