force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__RelatedChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedChargeType__c</fullName>
    <description>The charge type associated with the related product/service</description>
    <inlineHelpText>The charge type associated with the related product/service</inlineHelpText>
    <label>Related Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Implementation Fee</fullName>
            </value>
            <value>
                <fullName>Installation Fee</fullName>
            </value>
            <value>
                <fullName>License Fee</fullName>
            </value>
            <value>
                <fullName>Maintenance Fee</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; Handling</fullName>
            </value>
            <value>
                <fullName>Standard Price</fullName>
            </value>
            <value>
                <fullName>Subscription Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>