force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__RelatedLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related line item</description>
    <inlineHelpText>ID of the related line item</inlineHelpText>
    <label>Related Line Item</label>
    <referenceTo>Apttus_Config2__RelatedLineItem__c</referenceTo>
    <relationshipLabel>Price Breakups</relationshipLabel>
    <relationshipName>PriceBreakups</relationshipName>
    <type>Lookup</type>
</CustomField>