force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__RelatedListPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedListPrice__c</fullName>
    <description>The list price associated with the related product/service</description>
    <inlineHelpText>The list price associated with the related product/service</inlineHelpText>
    <label>Related List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>