force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__RelatedSellingFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedSellingFrequency__c</fullName>
    <description>The selling frequency associated with the related product/service</description>
    <inlineHelpText>The selling frequency associated with the related product/service</inlineHelpText>
    <label>Related Selling Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>