force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__TierBasePrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierBasePrice__c</fullName>
    <description>The unit price associated with the tier</description>
    <inlineHelpText>The unit price associated with the tier</inlineHelpText>
    <label>Tier Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>