force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__TierEndValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierEndValue__c</fullName>
    <description>The tier end value</description>
    <inlineHelpText>The tier end value</inlineHelpText>
    <label>Tier End Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>