force-app/main/default/objects/Apttus_Config2__PriceBreakup__c/fields/Apttus_Config2__TierFlatPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierFlatPrice__c</fullName>
    <description>The flat price associated with the tier</description>
    <inlineHelpText>The flat price associated with the tier</inlineHelpText>
    <label>Tier Flat Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>